# cbio-superapp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BETA.md  Dockerfile  ONCOPRINT_GAPS.md  OPTIMIZE_PLAN.md  PLOTS_TAB.md  README.md  STUDY_VIEW_GAPS.md  alembic.ini  pyproject.toml  tasks.py
.cloud/: build-job.yaml  inject-job.yaml  merge-job.yaml  sync-job.yaml
.github/workflows/: deploy-worker.yml  deploy.yml  pipeline.yml
.worker/: wrangler.toml
.worker/src/: index.js
alembic/: env.py
alembic/versions/: 0001_create_sessions_table.py
docs/: index.html
docs/img/: demo.tape
scripts/: optimize_db.py  setup-wif.sh
src/cbioportal/cli/: AGENTS.md  db.py  fetch.py  main.py  server.py  tui_app.py
src/cbioportal/cli/commands/: annotate.py  (+5 more)
src/cbioportal/core/: AGENTS.md  cache.py  cbio_config.py  data_puller.py  database.py  fetcher.py  gcs.py  loader.py  oncoprint_repository.py  plots_repository.py  session_repository.py  study_repository.py  study_view_repository.py  syncer.py
src/cbioportal/export/: clinical_tsv.py  maf.py  seg.py  vcf.py
src/cbioportal/web/: AGENTS.md  app.py  llm_proxy.py  schemas.py  session_limiter.py  terminal_service.py
tests/: AGENTS.md  capture_golden.py  conftest.py  repro_gene_alias.py  test_study_view_charts.py
tests/fixtures/: msk_chord_2024_baseline.json  msk_chord_2024_cancer_type.json  msk_chord_2024_tp53_filter.json  study_categories.yaml
tests/integration/: test_api_pull.py
tests/load/: README.md  baseline-single-connection-report.html  load-report.html  locustfile.py  pool-queue-report.html  smoke-report.html  studies.py
tests/performance/: benchmark_study_view.py  test_cna_load_strategies.py
tests/unit/: AGENTS.md  conftest.py  test_annotation_annotators.py  test_annotation_reference_civic.py  test_annotation_reference_intogen.py  test_annotation_reference_moalmanac.py  test_annotation_vep.py  test_build_filter_subquery.py  test_cbp_driver.py  test_cli_tools.py  test_cna_loader.py  test_error_handling.py  test_gcs.py  test_get_age_histogram.py  test_get_charts_meta.py  test_get_clinical_counts.py  test_get_clinical_data_table.py  test_get_cna_genes.py  test_get_data_types_chart.py  test_get_km_data.py  test_get_mutated_genes.py  test_get_numeric_histogram.py  test_get_sv_genes.py  test_get_tmb_fga_scatter.py  test_loader_fga.py  test_loader_normalization.py  test_molecular_profiles.py  test_oncoprint_repository.py  test_path_allowlist.py  test_pipeline_build.py  test_pipeline_merge.py  test_plots_repository.py  test_public_bind_guard.py  test_scratch_dir.py  test_scrub.py  test_session_limiter.py  test_session_repository.py  test_session_routes.py  test_slash_commands.py  test_syncer.py  (+5 more)
tests/visual/: capture_legacy_study_view.py  capture_new_study_view.py
(+115 files in other folders)
